# tx2yolovideo

./: Makefile  README.md  gst.sh  httplaunch.c  tegra-cam.py  tx2video.cpp  tx2yolovideo.tgz  yolo.c  yolo_object_detection.cpp  yolopipeline.sh
get-plugin/: Makefile  Makefile.in  config.h  configure  configure.ac  configureme.sh  libtool
get-plugin/src/: Makefile  Makefile.am  Makefile.in  gstyolo.c  gstyolo.h  gstyolopixbuf.c  libgstyolo.la  libgstyolo_la-gstyolo.lo
